# routes/web.php
@@ -8,3 +8,4 @@ use App\Http\Controllers\AuthController;
 
 Route::post('/login',    [AuthController::class, 'login']);
 Route::post('/register', [AuthController::class, 'register']);
+Route::post('/begin', [AuthController::class, 'registerAnsawer']);
